@@ -8,13 +8,12 @@
     License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS
     OF ANY KIND, either express or implied. See the License for the specific
     language governing permissions and limitations under the License. -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>org.superbiz</groupId>
   <artifactId>deltaspike-fullstack</artifactId>
-  <name>OpenEJB :: Examples :: JSF2/CDI/BV/JPA/DeltaSpike</name>
+  <name>TomEE :: Examples :: JSF2/CDI/BV/JPA/DeltaSpike</name>
   <version>8.0.0-SNAPSHOT</version>
 
   <packaging>war</packaging>
@@ -23,7 +22,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
     <version.myfaces2>2.3.0</version.myfaces2>
-    <version.deltaspike>1.3.0</version.deltaspike>
+    <version.deltaspike>1.9.0</version.deltaspike>
     <version.extval>2.0.8</version.extval>
     <tomee.version>8.0.0-SNAPSHOT</tomee.version>
   </properties>
@@ -82,8 +81,9 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.18.1</version>
-        <configuration> <!-- optional -->
+        <version>2.22.1</version>
+        <configuration>
+          <argLine>-Djdk.attach.allowAttachSelf</argLine>
           <systemPropertyVariables>
             <openejb.jul.forceReload>true</openejb.jul.forceReload>
             <logging.level.OpenEJB.startup>FINEST</logging.level.OpenEJB.startup>
@@ -113,8 +113,8 @@
   <dependencies>
     <dependency>
       <groupId>org.apache.tomee</groupId>
-            <artifactId>javaee-api</artifactId>
-       <version>8.0</version>
+      <artifactId>javaee-api</artifactId>
+      <version>[8.0,)</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
@@ -148,7 +148,7 @@
     <dependency>
       <groupId>org.apache.xbean</groupId>
       <artifactId>xbean-asm7-shaded</artifactId>
-      <version>4.12</version>
+      <version>4.14</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
