@@ -16,9 +16,7 @@
     See the License for the specific language governing permissions and
     limitations under the License.
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
 
@@ -26,7 +24,7 @@
   <artifactId>multiple-arquillian-adapters</artifactId>
   <packaging>jar</packaging>
   <version>8.0.0-SNAPSHOT</version>
-  <name>OpenEJB :: Examples :: Multiple Arquillian Adapters</name>
+  <name>TomEE :: Examples :: Multiple Arquillian Adapters</name>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -65,6 +63,7 @@
             </goals>
             <configuration>
               <skip>${maven.test.skip}</skip>
+              <argLine>-Djdk.attach.allowAttachSelf</argLine>
               <groups>org.superbiz.embedded.standalone.Embedded</groups>
               <systemPropertyVariables>
                 <arquillian.launch>embedded</arquillian.launch>
@@ -96,6 +95,7 @@
             <configuration>
               <skip>${maven.test.skip}</skip>
               <groups>org.superbiz.tomee.embedded.TomEEEmbedded</groups>
+              <argLine>-Djdk.attach.allowAttachSelf</argLine>
               <systemPropertyVariables>
                 <arquillian.launch>tomee-embedded</arquillian.launch>
                 <openejb.arquillian.adapter>tomee-embedded</openejb.arquillian.adapter>
@@ -138,8 +138,8 @@
   <dependencies>
     <dependency>
       <groupId>org.apache.tomee</groupId>
-            <artifactId>javaee-api</artifactId>
-       <version>8.0</version>
+      <artifactId>javaee-api</artifactId>
+      <version>[8.0,)</version>
       <scope>provided</scope>
     </dependency>
 
