@@ -15,8 +15,7 @@
   See the License for the specific language governing permissions and
   limitations under the License.
   -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <parent>
     <artifactId>tck</artifactId>
     <groupId>org.apache.tomee</groupId>
@@ -25,7 +24,7 @@
 
   <modelVersion>4.0.0</modelVersion>
   <artifactId>cdi-tomee</artifactId>
-  <name>OpenEJB :: TCK :: CDI TomEE</name>
+  <name>TomEE :: TCK :: CDI TomEE</name>
 
   <!--
    * debug the server side by adding -Dopenejb.server.debug=true
@@ -34,6 +33,7 @@
   <properties>
     <suite.name>passing</suite.name>
     <cdi-tck.version>${cdi.tck.20.version}</cdi-tck.version>
+    <tomee.opts/>
   </properties>
 
   <dependencies>
@@ -110,6 +110,14 @@
       <version>${cdi-tck.version}</version>
       <exclusions>
         <exclusion>
+          <groupId>javax.xml.soap</groupId>
+          <artifactId>javax.xml.soap-api</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>javax.inject</groupId>
+          <artifactId>javax.inject</artifactId>
+        </exclusion>
+        <exclusion>
           <groupId>javax.enterprise</groupId>
           <artifactId>cdi-api</artifactId>
         </exclusion>
@@ -128,6 +136,10 @@
         <exclusion>
           <groupId>javax.transaction</groupId>
           <artifactId>jta</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>javax.annotation</groupId>
+          <artifactId>javax.annotation-api</artifactId>
         </exclusion>
       </exclusions>
     </dependency>
@@ -228,4 +240,17 @@
       </plugin>
     </plugins>
   </build>
+
+  <profiles>
+    <profile>
+      <id>java8</id>
+      <activation>
+        <jdk>1.8</jdk>
+      </activation>
+      <properties>
+        <tomee.opts>-Xmx1536m -XX:PermSize=512m -XX:MaxPermSize=512m -XX:+UseConcMarkSweepGC -XX:+CMSClassUnloadingEnabled -XX:+CMSPermGenSweepingEnabled</tomee.opts>
+      </properties>
+    </profile>
+  </profiles>
+
 </project>
